--- a/acces-git.yml
+++ b/acces-git.yml
@@ -1,2 +1,2 @@
    # git config --global user.email "tarik.ezznati@gmail.com" 
-   # git config --global user.name "trainingta"
+   # git config --global user.name "t")"
